--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ suggestText.value="";
 }
 
 /* WEATHER */
-const WEATHER_API_KEY="YOUR_API_KEY";
+const WEATHER_API_KEY="1c35aa3e78baa8407e90a9af1e1597a9";
 
 function getLocation(){
 if(navigator.geolocation){
@@ -311,7 +311,7 @@ delayWarning.innerText="⚠️ Possible school delays due to weather";
 buildForecast(d.daily);
 
 }catch{
-weatherText.innerText="Weather unavailable";
+weatherText.innerText="Weather unavailable Please contact the owner of this page";
 }
 }
 
@@ -333,3 +333,4 @@ getLocation();
 </script>
 </body>
 </html>
+
