--- a/index.html
+++ b/index.html
@@ -256,13 +256,13 @@ body{
   </div>
 </div>
 
-<!-- Weather======-->
+<!-- Weather======
 <div id="weather" class="page">
   <div class="box">
     <h2>🌤️ 5-Day Forecast</h2>
     <div id="forecastBox">Loading forecast...</div>
   </div>
-</div>
+</div> -->
 
 <p class="small">© 2026 MavNet Industries LLC</p>
 
@@ -446,5 +446,6 @@ loadForecast();
 
 </body>
 </html>
+
 
 
