Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ body{
 <!-- System Banner -->
 <div id="system-banner">
   <div id="banner-alert">
-    ⚠️ Fairfax County Public Schools delayed by 2 hours on Monday, Feburary 23rd! ⚠️
+    ⚠️ Fairfax County Public Schools closed on Monday, Feburary 23rd! ⚠️
   </div>
   <div id="banner-new">
     ✨ What's New: Page Preferences tab added for custom colors! ✨
@@ -388,5 +388,6 @@ setupWordle();
 
 </body>
 </html>
+
 
 
