Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ body{
     color:white;
     text-align:center;
     padding:25px;
+    overflow-y: auto;
 }
 /* Boxes */
 .box{
@@ -388,6 +389,7 @@ setupWordle();
 
 </body>
 </html>
+
 
 
 
