Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body{
 
 /* System Banner */
 #system-banner {
-    position: fixed;
+    pointer-events: none;
     top: 0;
     left: 0;
     width: 100%;
@@ -76,6 +76,7 @@ body{
     margin:5px auto;
 }
 #delay-banner{
+    pointer-events: none;
     background:#ff4444;
     color:white;
     font-weight:bold;
@@ -389,6 +390,7 @@ setupWordle();
 
 </body>
 </html>
+
 
 
 
