--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body{
 <!-- System Banner -->
 <div id="system-banner">
   <div id="banner-alert">
-    ⚠️ Fairfax County Public Schools open on Tuesday Feburary 24th ⚠️
+    ⚠️ System Updates in Progress, Please Expect Delays in Notifications ⚠️
   </div>
   <div id="banner-new">
     ✨ What's New: Page Preferences tab added for custom colors! ✨
@@ -390,6 +390,7 @@ setupWordle();
 
 </body>
 </html>
+
 
 
 
